Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,12 @@ stages:
         projects: |
           $(workingDirectory)/*.csproj
         arguments: --output $(System.DefaultWorkingDirectory)/publish_output --configuration Release
-
+    - task: Npm@1
+      inputs:
+        command: 'custom'
+        workingDir: $(workingDirectory)
+        customCommand: 'install -g newman'
+        verbose: true
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
