--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,13 +37,6 @@ stages:
         projects: |
           $(workingDirectory)/*.csproj
         arguments: --output $(System.DefaultWorkingDirectory)/publish_output --configuration Release
-    - task: Npm@1
-      displayName: Install Newman
-      inputs:
-        command: 'custom'
-        workingDir: $(workingDirectory)
-        customCommand: 'install -g newman'
-        verbose: true
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
@@ -81,12 +74,20 @@ stages:
               appName: $(functionAppName)
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
 
-  - job: Build
+
+  - job: Test
     displayName: Test
     pool:
       vmImage: $(vmImageName)
 
     steps:
+    - task: Npm@1
+      displayName: Install Newman
+      inputs:
+        command: 'custom'
+        workingDir: $(workingDirectory)
+        customCommand: 'install -g newman'
+        verbose: true
     - task: Bash@3
       inputs:
         targetType: 'inline'
@@ -94,5 +95,7 @@ stages:
           # Write your commands here
           
           echo 'Run Newman'
-          
-          newman run NewmanRunApi.postman_collection.json -e Dev.postman_environment.json
+          cd Postman/
+          newman run NewmanRunApi.postman_collection.json -e Dev.postman_environment.json --reporters cli,junit
+        
+      
