--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,6 +89,7 @@ stages:
         customCommand: 'install -g newman'
         verbose: true
     - task: Bash@3
+      displayName: Run Newman collection
       inputs:
         targetType: 'inline'
         script: |
@@ -98,4 +99,9 @@ stages:
           cd Postman/
           newman run NewmanRunApi.postman_collection.json -e Dev.postman_environment.json --reporters cli,junit
         
+    - task: PublishTestResults@2
+      displayName: Publish results
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '**/TEST-*.xml'
       
