--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,11 +97,12 @@ stages:
           
           echo 'Run Newman'
           cd Postman/
-          newman run NewmanRunApi.postman_collection.json -e Dev.postman_environment.json --reporters cli,junit --reporter-junit-export results\newman-test-results.xml
+          newman run NewmanRunApi.postman_collection.json -e Dev.postman_environment.json --reporters cli,junit --reporter-junit-export results/newman-test-results.xml
         
     - task: PublishTestResults@2
       displayName: Publish results
       inputs:
         testResultsFormat: 'JUnit'
-        testResultsFiles: '**/*-test-*.xml'
+        testResultsFiles: '**/results/*-test-*.xml'
+      
       
