Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,7 +85,5 @@ stages:
       inputs:
         testResultsFormat: 'JUnit'
         testResultsFiles: '**/results/*-test-*.xml'
-      
+        failTaskOnFailedTests: true
 
-      
-      
